--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ freeline/
 freeline_project_description.json
 
 .DS_Store
+
+bazel-AndroidBazel
+bazel-bin
+bazel-genfiles
+bazel-out
+bazel-testlogs
